nxMyDB v2.1.0 (Not released):
  NEW: Configuration option "Connection_Attempts" to set the max number of attempts.
  NEW: Configuration option "Connection_Timeout" to set the server timeout.
  NEW: Configuration option "Servers" to list names of server arrays.
  NEW: Support for multiple MySQL Server configurations.
  NEW: Updated MySQL Client Library (libmysql.dll) to v5.1.42.
  CHG: Configuration options have changed, users must update their INI file.
  FIX: Reduced lock contention in connection pool callbacks

nxMyDB v2.0.0 (Jan 24, 2009):
  NEW: Compatibility with ioFTPD v6.9 and newer.
  NEW: Configuration option "Sync_Purge" to control the purge age.
  NEW: Scheduler option to purge old entries from the changes tables.
  CHG: Database schema required changes for the increased stats sections and new fields.
  FIX: Group and user files were not updated during database synchronization.
  FIX: Increase the "host" column by one character in table "io_user_hosts".
  FIX: User credits, ratio, and stats were read from the wrong columns.

nxMyDB v1.0.0 (Jan 9, 2009):
  NEW: Updated MySQL Client Library (libmysql.dll) to v5.1.30.
  CHG: Final release for ioFTPD v5.8.5 to v6.4.

nxMyDB v0.5.0 (Apr 11, 2008):
  NEW: Improved logging for several error and warning cases.
  NEW: Updated MySQL Client Library (libmysql.dll) to v5.0.51a.
  CHG: Rearranged synchronization structure members to save a few bytes on alignment.

nxMyDB v0.4.0 (Nov 14, 2007):
  NEW: Compiled as a release build (alpha releases were debug builds).
  NEW: New topics in the FAQ section of the readme.
  CHG: Only open the debug log only when a message is available to be written,
       this allows you to download the log file through ioFTPD.
  FIX: Corrected readme instructions for executing the "schema.sql" batch file.

nxMyDB v0.3.0 (Oct 6, 2007):
  NEW: Added configuration option "Log_Level" to control the log verbosity.
  NEW: Group rename operations are now implemented.